added method to search owners by a searchTerm
